k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: punqit-frontend
  namespace: staging
spec:
  rules:
    - host: www.staging.punqit.com
    http:
      paths:
        path: /
        backend:
          serviceName: punqit-frontend
          servicePort: 80
